--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <script src="scripts/fundo.js"></script>
+    <script src="scripts/personagem.js"></script>
     <script src="sketch.js"></script>
 
 
