--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
     <script src="scripts/fundo.js"></script>
+    <script src="scripts/sprite.js"></script>
+    <script src="scripts/screen.js"></script>
     <script src="scripts/personagem.js"></script>
     <script src="sketch.js"></script>
 
