--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="scripts/sprite.js"></script>
     <script src="scripts/screen.js"></script>
     <script src="scripts/personagem.js"></script>
+    <script src="scripts/protagonista.js"></script>
+    <script src="scripts/inimigo.js"></script>
     <script src="sketch.js"></script>
 
 
