--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="scripts/personagem.js"></script>
     <script src="scripts/protagonista.js"></script>
     <script src="scripts/inimigo.js"></script>
+    <script src="scripts/pontuacao.js"></script>
     <script src="sketch.js"></script>
 
 
