refactor: Divisão em game scenes e variáveis globais
Cria arquivo para organização de variáveis globais. Cria variável para controle da cena a ser desenhada.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <script src="scripts/global-variables.js"></script>
     <script src="scripts/fundo.js"></script>
     <script src="scripts/sprite.js"></script>
     <script src="scripts/screen.js"></script>
