add: Ícone favicon

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
+    <meta chars et="utf-8">
+    <link rel="icon" type="image/ico" href="assets/imagens/assets/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>GameDev</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D@0.6/p5.collide2d.js" integrity="sha256-lwVY/oCRJ3vMsjb0/MkdrgT8/QRNfNcXwH32+lDMFH8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-    <title>GameDev</title>
 
 </head>
 
