add: Classe de sons e assets de sons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <script src="scripts/global-variables.js"></script>
     <script src="scripts/fundo.js"></script>
+    <script src="scripts/sons.js"></script>
     <script src="scripts/sprite.js"></script>
     <script src="scripts/screen.js"></script>
     <script src="scripts/personagem.js"></script>
