refactor: Organiza arquivos scripts em diretórios
Cria diretórios de jogo e scenes

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <script src="scripts/global-variables.js"></script>
-    <script src="scripts/fundo.js"></script>
-    <script src="scripts/sons.js"></script>
-    <script src="scripts/sprite.js"></script>
-    <script src="scripts/screen.js"></script>
-    <script src="scripts/personagem.js"></script>
-    <script src="scripts/protagonista.js"></script>
-    <script src="scripts/inimigo.js"></script>
-    <script src="scripts/pontuacao.js"></script>
+    <script src="scripts/jogo/fundo.js"></script>
+    <script src="scripts/scenes/sons.js"></script>
+    <script src="scripts/jogo/sprite.js"></script>
+    <script src="scripts/jogo/screen.js"></script>
+    <script src="scripts/jogo/personagem.js"></script>
+    <script src="scripts/jogo/protagonista.js"></script>
+    <script src="scripts/jogo/inimigo.js"></script>
+    <script src="scripts/jogo/pontuacao.js"></script>
     <script src="sketch.js"></script>
 
 
