refactor: Criação de classes de fases do jogo
Organiza fases do jogo em arquivos distintos, separando os contextos diferentes de cada fase

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 <body>
     <script src="scripts/global-variables.js"></script>
     <script src="scripts/jogo/fundo.js"></script>
-    <script src="scripts/scenes/sons.js"></script>
     <script src="scripts/jogo/sprite.js"></script>
     <script src="scripts/jogo/screen.js"></script>
     <script src="scripts/jogo/personagem.js"></script>
     <script src="scripts/jogo/protagonista.js"></script>
     <script src="scripts/jogo/inimigo.js"></script>
     <script src="scripts/jogo/pontuacao.js"></script>
+    <script src="scripts/scenes/sons.js"></script>
+    <script src="scripts/scenes/telaInicial.js"></script>
+    <script src="scripts/scenes/fase1.js"></script>
+    <script src="scripts/scenes/gameOver.js"></script>
     <script src="sketch.js"></script>
 
 
