--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <script src="scripts/scenes/sons.js"></script>
     <script src="scripts/scenes/telaInicial.js"></script>
     <script src="scripts/scenes/fase1.js"></script>
+    <script src="scripts/scenes/achou-varinha.js"></script>
+    <script src="scripts/scenes/fase2.js"></script>
     <script src="scripts/scenes/gameOver.js"></script>
     <script src="sketch.js"></script>
 
