--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="scripts/scenes/achou-varinha.js"></script>
     <script src="scripts/scenes/fase2.js"></script>
     <script src="scripts/scenes/gameOver.js"></script>
+    <script src="scripts/scenes/encerramento.js"></script>
     <script src="sketch.js"></script>
 
 
